test/compile-fail/scope/use-private-struct/expected.txt
error: item `b` is private
 --> top.rhdl:5:7
  |
5 | use a::b;
  |        ^ private item
